gather statt equation
Die Umgebung equation wird nicht von amsmath definiert und hat in der
Vergangenheit schon öfter Problem im Zusammenhang mit Verweisen gemacht.
Daher ist es besser, nur gather zu verwenden.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1841 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik-zusfa/definf.tex
+++ b/linde-stochastik-zusfa/definf.tex
@@ -167,10 +167,10 @@ Bei einem Experiment seien h"ochstens abz"ahlbar unendlich viele Versuchsergebni
 m"oglich. Dann kann man entweder $\Omega=\{\omega_1,\ldots,\omega_N\}$ oder
 aber $\Omega=\{\omega_1,\omega_2,\ldots\}$ w"ahlen. Als $\sigma$-Algebra nimmt man in diesen
 F"allen stets die Potenzmenge $\PotM(\Omega)$. Setzt man
-\begin{equation}
+\begin{gather}
 \label{zu}
 p_i :=\WKM(\{\omega_i\})\,,\quad 1\le i\le N\quad\mbox{bzw.}\quad i=1,2,\ldots,
-\end{equation}
+\end{gather}
 dann erh"alt man Zahlen mit den Eigenschaften
 \begin{eigenschaften}
  \item $p_i\ge 0$ und
@@ -179,10 +179,10 @@ dann erh"alt man Zahlen mit den Eigenschaften
   \label{p2}
 \end{eigenschaften}
 F"ur eine Menge $A\subseteq \Omega$ folgt dann
-\begin{equation}
+\begin{gather}
 \label{diskret}
 \WKM(A):= \sum_{\{i\, : \,\omega_i\in A\}} p_i\;.
-\end{equation}
+\end{gather}
 Umgekehrt, gibt man eine Folge $(p_i)_{i\ge 1}$ reeller Zahlen mit \ref{p1} und \ref{p2} vor,
 so wird durch (\ref{diskret}) ein Wahrscheinlichkeitsma"s $\WKM$ auf $\PotM(\Omega)$ definiert. F"ur
 endliche oder abz"ahlbar unendliche Grundr"aume $\Omega$ hat man also folgende "Aquivalenz:
@@ -316,11 +316,11 @@ Es sei $[a,b]$ ein endliches Intervall. Durch
 \end{gather*}
 wird eine Wahrscheinlichkeitsdichte auf $\R$ definiert. Damit berechnet sich die Wahrscheinlichkeit
 eines Intervalls $[\alpha,\beta]$ durch
-\begin{equation}
+\begin{gather}
 \label{gleich}
 \WKM([\alpha,\beta])=\int_\alpha^\beta p(x)\,\mathrm dx= \frac{\mbox{L"ange von}\;([\alpha,\beta]\cap[a,b])}
 {b-a}\;.
-\end{equation}
+\end{gather}
 Insbesondere ergibt sich im Fall $[\alpha,\beta]\subseteq [a,b]$ die Formel
 \begin{gather*}
   \WKM([\alpha,\beta])= \frac{\beta-\alpha}{b-a}\;,
@@ -385,10 +385,10 @@ nur von deren Volumen ab, nicht aber von deren Lage innerhalb $E$ noch von ihrer
 \subsubsection{Definition}
 F"ur ein Wahrscheinlichkeitsma"s $\WKM$ auf $(\R,\BorelM(\R))$ wird die
 \textbf{Verteilungsfunktion} $F\colon\R\mapsto\R$ durch
-\begin{equation}
+\begin{gather}
 \label{F0}
 F(t):=\WKM((-\infty,t])\,,\quad t\in\R  \;,
-\end{equation}
+\end{gather}
 definiert.\\
 \textit{Hinweis:} Ist $\WKM$ ein diskretes Wahrscheinlichkeitsma"s auf $(\Omega,\PotM(\Omega))$ mit $\Omega\subseteq\R$,
 so modifiziert sich die Definition zu
@@ -434,10 +434,10 @@ Es sei $(\Omega,\Algeb,\WKM)$ ein Wahrscheinlichkeitsraum. Dann wird
 f"ur $B\in \Algeb$ mit $\WKM(B)>0$ die \textbf{bedingte Wahrscheinlichkeit} $\WKM(\,\cdot\,|B)$
 (oder die Wahrscheinlichkeit von $A$ unter der Bedingung $B$)
 durch
-\begin{equation}
+\begin{gather}
 \label{Bed}
  \WKM(A|B):=\frac{\WKM(A\cap B)}{\WKM(B)}\quad\mbox{f"ur}\;\;A\in\Algeb
-\end{equation}
+\end{gather}
 definiert. Sie gibt die Wahrscheinlichkeit daf"ur an, dass $A$
 eintritt, unter der Bedingung, dass $B$ bereits eingetreten ist. H"aufig verwendet man
 Formel (\ref{Bed}) auch in der Form
@@ -474,11 +474,11 @@ Bayes wichtig. Sie besagt das folgende:
 Unter den Voraussetzungen aus Satz~\ref{total} an $B_1,\ldots,B_n$ und $A$ folgt
 f"ur
 $\WKM(A)>0$ die Identit"at
-\begin{equation}
+\begin{gather}
 \label{Bayes}
 \WKM(B_k|A)=\frac{\WKM(B_k)\cdot\WKM(A|B_k)}{\sum_{j=1}^n
 \WKM(B_j)\cdot\WKM(A|B_j)}\quad\mbox{f"ur}\;\;k=1,\ldots,n\;.
-\end{equation}
+\end{gather}
 \end{thm}
 \textit{Bemerkung:} Den Nenner in Formel (\ref{Bayes}) kann man (falls bekannt) durch $\WKM(A)$
 ersetzen.
@@ -496,16 +496,16 @@ $A$ und $B$ unah"angig, dann gilt dies auch f"ur die Paare $A$ und $B^c$ bzw.~$A
 \subsubsection{Unabh"angigkeit von $n$ Ereignissen}
 Die Ereignisse $A_1,\ldots,A_n$ aus $\Algeb$ hei"sen (stochastisch) \textbf{unabh"angig},
 wenn f"ur alle Teilmengen $I\subseteq\{1,\ldots,n\}$ stets
-\begin{equation}
+\begin{gather}
 \label{unab1}
 \WKM\Bigl(\bigcap_{i\in I} A_i\Bigr)= \prod_{i\in I}\WKM(A_i)
-\end{equation}
+\end{gather}
 gilt. Man kann dies auch wie folgt formulieren: F"ur alle $m\ge 2$ und alle
 $1\le i_1<\cdots<i_m\le n$ hat man
-\begin{equation}
+\begin{gather}
 \label{unab2}
 \WKM(A_{i_1}\cap\cdots\cap A_{i_m})= \WKM(A_{i_1})\cdots\WKM(A_{i_m})\;.
-\end{equation}
+\end{gather}
 Die Ereignisse $A_1,\ldots,A_n$ aus $\Algeb$ hei"sen \textbf{paarweise unabh"angig}, wenn
 jeweils zwei Ereignisse aus $A_1,\ldots,A_n$ unabh"angig sind, d.\,h.~die Gleichungen
 (\ref{unab1}) bzw.~(\ref{unab2}) m"ussen nur f"ur $\mathrm{card}(I)=2$ bzw.~f"ur $m=2$ erf"ullt sein.
@@ -698,10 +698,10 @@ gilt. Dann haben $X$ bzw.~$Y$ Verteilungsdichten $q$ und $r$ mit
 \subsubsection{Unabh"angigkeit von zuf"alligen Gr"o"sen}
 Gegeben seien $n$ zuf"allige Gr"o"sen $X_1,\ldots,X_n$ auf $(\Omega,\Algeb,\WKM)$. Gilt f"ur beliebige
 Borelmengen $B_1,\ldots,B_n\in\BorelM(\R)$ stets
-\begin{equation}
+\begin{gather}
 \label{unab}
 \WKM(X_1\in B_1,\ldots,X_n\in B_n)=\WKM(X_1\in B_1)\cdots\WKM(X_n\in B_n)\;,
-\end{equation}
+\end{gather}
 so hei"sen $X_1,\ldots,X_n$ \textbf{unabh"angig}.\\
 \textit{Bemerkung 1:} Die Unabh"angigkeit der $X_j$ ist "aquivalent zu folgender Aussage: F"ur
 beliebige Borelmengen $B_j\in\BorelM(\R)$ sind die Ereignisse $\left(X_j^{-1}(B_j)\right)_{j=1}^n$
@@ -1026,10 +1026,10 @@ Sind $X$ und $Y$ unabh"angig, so impliziert dies ${\rm  cov}(X,Y)=0$, d.\,h.~$X$
 \textbf{unkorreliert}. Man beachte, dass aus der Unkorreliertheit i.a.~nicht die Unabh"angigkeit folgt.
 \item
 Man hat
-\begin{equation}
+\begin{gather}
 \label{cov}
 |{\rm  cov}(X,Y)|\le (\V X)^{1/2}(\V Y)^{1/2}\;.
-\end{equation}
+\end{gather}
 \subsubsection{Korrelationskoeffizient}
 F"ur zwei zuf"allige Gr"o"sen $X$ und $Y$ mit zweiten Momenten definiert man ihren
 \textbf{Korrelationskoeffizienten} durch
