Doppelpunkt in Mathemodus mit \colon
Der Doppelpunkt : ist im Mathemodus der Operator für die Division. Der
Doppelpunkt, wie er auch im Text verwendet wird, ist \colon. Der
Unterschied zeigt sich in den Abständen.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1842 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik-zusfa/definf.tex
+++ b/linde-stochastik-zusfa/definf.tex
@@ -181,14 +181,14 @@ dann erh"alt man Zahlen mit den Eigenschaften
 F"ur eine Menge $A\subseteq \Omega$ folgt dann
 \begin{gather}
 \label{diskret}
-\WKM(A):= \sum_{\{i\, : \,\omega_i\in A\}} p_i\;.
+\WKM(A):= \sum_{\{i\colon \omega_i\in A\}} p_i\;.
 \end{gather}
 Umgekehrt, gibt man eine Folge $(p_i)_{i\ge 1}$ reeller Zahlen mit \ref{p1} und \ref{p2} vor,
 so wird durch (\ref{diskret}) ein Wahrscheinlichkeitsma"s $\WKM$ auf $\PotM(\Omega)$ definiert. F"ur
 endliche oder abz"ahlbar unendliche Grundr"aume $\Omega$ hat man also folgende "Aquivalenz:
 \begin{gather*}
-  \{\WKM\,:\,\WKM\;\mbox{Wahrscheinlichkeitsma"s auf}\;\PotM(\Omega)\}
-     \Longleftrightarrow\{(p_i)_{i\ge 1}\,:\, (p_i)_{i\ge 1}\;\mbox{erf"ullen (\ref{p1}) und (\ref{p2})}\}
+  \{\WKM\colon \WKM\;\mbox{Wahrscheinlichkeitsma"s auf}\;\PotM(\Omega)\}
+     \Longleftrightarrow\{(p_i)_{i\ge 1}\colon (p_i)_{i\ge 1}\;\mbox{erf"ullen (\ref{p1}) und (\ref{p2})}\}
 \end{gather*}
 Die Zuordnung erfolgt "uber (\ref{zu}) bzw.~(\ref{diskret}).
 
@@ -198,7 +198,7 @@ oder abz"ahlbar unendlich). Ein Wahrscheinlichkeitsma"s $\WKM$ auf $(\Omega,\Pot
 hei"st \textbf{diskret}, wenn es eine h"ochstens abz"ahlbar unendliche Teilmenge $D\subseteq \Omega$
 mit $\WKM(D)=1$ gibt. Mit $D=\{\omega_1,\omega_2,\ldots\}$ gilt dann f"ur $A\subseteq \Omega$ wie zuvor
 \begin{gather*}
-  \WKM(A):= \sum_{\{i\, : \,\omega_i\in A\}} p_i\;,
+  \WKM(A):= \sum_{\{i\colon \omega_i\in A\}} p_i\;,
 \end{gather*}
 wobei $p_i:=\WKM(\{\omega_i\})$. Auf h"ochstens abz"ahlbar unendlichen Grundr"aumen ist somit \textbf{jedes}
 Wahrscheinlichkeitsma"s diskret.
@@ -232,8 +232,8 @@ durch
 \begin{gather*}
   \delta_{\omega_0}(A):=\left\{
      \begin{array}{rcl}
-       1 &:& \omega_0\in A\\
-       0 &:& \omega_0\notin A
+       1 &\colon& \omega_0\in A\\
+       0 &\colon& \omega_0\notin A
      \end{array}
      \right.
 \end{gather*}
@@ -251,7 +251,7 @@ Das Ma"s $\WKM$ auf $\PotM(\Omega)$ mit
 \end{gather*}
 hei"st \textbf{Gleichverteilung} auf $\{\omega_1,\ldots,\omega_N\}$. F"ur ein Ereignis $A$ gilt dann
 \begin{gather*}
-  \WKM(A)=\frac{\mathrm{card}\{ i\le N : \omega_i\in A\}}{N}=
+  \WKM(A)=\frac{\mathrm{card}\{ i\le N \colon \omega_i\in A\}}{N}=
      \frac{\mbox{Anzahl der g"unstigen F"alle f"ur A}}{\mbox{Anzahl der m"oglichen F"alle}}\;.
 \end{gather*}
 \subsubsection{Binomialverteilung}
@@ -309,8 +309,8 @@ Es sei $[a,b]$ ein endliches Intervall. Durch
 \begin{gather*}
   p(x):=\left\{
      \begin{array}{ccl}
-       \frac{1}{b-a} &:& x\in [a,b]\\
-       0 &:& x\notin [a,b]
+       \frac{1}{b-a} &\colon& x\in [a,b]\\
+       0 &\colon& x\notin [a,b]
      \end{array}
      \right.
 \end{gather*}
@@ -337,8 +337,8 @@ ihre Dichte
 \begin{gather*}
   p(x):=\left\{
      \begin{array}{ccr}
-       \lambda\,\mathrm e^{-\lambda x} &:& x>0\\
-       0 &:& x\le 0
+       \lambda\,\mathrm e^{-\lambda x} &\colon& x>0\\
+       0 &\colon& x\le 0
      \end{array}
      \right.\;.
 \end{gather*}
@@ -527,13 +527,13 @@ $J\subseteq \{1,\ldots,n\}$.
 F"ur eine Abbildung $X\colon\Omega\mapsto\R$ und eine Teilmenge $B\subseteq\R$ wird das
 \textbf{vollst"andige Urbild} von $B$ unter $X$ durch
 \begin{gather*}
-  X^{-1}(B):=\{\omega\in\Omega : X(\omega)\in B\}
+  X^{-1}(B):=\{\omega\in\Omega \colon X(\omega)\in B\}
 \end{gather*}
 definiert. Verk"urzend schreibt man auch $X^{-1}(B)=\;\{X\in B\}$.
 \subsubsection{Zuf"allige Gr"o"sen}
 Sei $\Omega$ eine Menge, die mit einer $\sigma$-Algebra $\Algeb$ versehen ist. Eine Abbildung
 $X\colon\Omega\mapsto\R$ hei"st \textbf{zuf"allige Gr"o"se} oder \textbf{reellwertige Zufallsvariable}
-oder \textbf{zuf"allige reelle Zahl}, wenn f"ur jedes $t\in\R$ die Menge $\{\omega\in\Omega: X(\omega)\le t\}$
+oder \textbf{zuf"allige reelle Zahl}, wenn f"ur jedes $t\in\R$ die Menge $\{\omega\in\Omega\colon X(\omega)\le t\}$
 zur $\sigma$-Algebra $\Algeb$ geh"ort.\\
 \textit{Bemerkung:} In diesem Fall gilt dann auch $X^{-1}(B)\in\Algeb$ f"ur jede Borelmenge $B\subseteq \R$.
 
@@ -542,7 +542,7 @@ Sei $(\Omega,\Algeb,\WKM)$ ein Wahrscheinlichkeitsraum.
 F"ur eine zuf"allige Gr"o"se $X\colon\Omega\mapsto\R$ ist die Abbildung
 $\WKM_X \colon \BorelM(\R)\mapsto [0,1]$ mit
 \begin{gather*}
-  \WKM_X(B)=\WKM\big(X^{-1}(B)\big)=\WKM\{\omega\in\Omega : X(\omega)\in B\}=\WKM(\{X\in B\})= \WKM(X\in B)
+  \WKM_X(B)=\WKM\big(X^{-1}(B)\big)=\WKM\{\omega\in\Omega \colon X(\omega)\in B\}=\WKM(\{X\in B\})= \WKM(X\in B)
 \end{gather*}
 sinnvoll definiert.
 \begin{thm}
@@ -553,19 +553,19 @@ Man nennt $\WKM_X$ das \textbf{Verteilungsgesetz} von $X$ (bzgl.~$\WKM$).
 Eine zuf"allige Gr"o"se $X$ hei"st \textbf{diskret}, wenn $\WKM_X$ ein diskretes
 Wahrscheinlichkeitsma"s ist. Damit hat $\WKM_X$ die Gestalt
 \begin{gather*}
-  \WKM_X(B)=\sum_{\{i\, : \,x_i\in  B\}} p_i
+  \WKM_X(B)=\sum_{\{i\colon x_i\in  B\}} p_i
 \end{gather*}
 mit geeigneten $x_i\in\R$ und $p_i\ge 0$. Die $x_i$ sind die m"oglichen Werte von $X$, d.\,h.~es
 gilt\\ $\WKM(X\in\{x_1,x_2,\ldots\})=1$,
 und
 \begin{gather*}
-  p_i=\WKM\{\omega\in\Omega : X(\omega)=x_i\}\;.
+  p_i=\WKM\{\omega\in\Omega \colon X(\omega)=x_i\}\;.
 \end{gather*}
 Eine zuf"allige Gr"o"se $X$ hei"st \textbf{stetig}, falls $\WKM_X$ ein stetiges Wahrscheinlichkeitsma"s
 ist. Das gilt genau dann, wenn mit einer Wahrscheinlichkeitsdichte $p$ f"ur alle $\alpha<\beta$
 die Gleichung
 \begin{gather*}
-  \WKM_X([\alpha,\beta])=\WKM\{\omega\in\Omega : \alpha\le X(\omega)\le\beta\}=\int_\alpha^\beta\,p(x)\,
+  \WKM_X([\alpha,\beta])=\WKM\{\omega\in\Omega \colon \alpha\le X(\omega)\le\beta\}=\int_\alpha^\beta\,p(x)\,
      \mathrm d x
 \end{gather*}
 erf"ullt ist. Die Funktion $p$ nennt man auch \textbf{Verteilungsdichte} (oder einfach
@@ -577,11 +577,11 @@ oder \textbf{Poissonverteilt} etc., wenn $\WKM_X$ von diesem Typ ist. In allen d
 ist $X$ diskret. Zum Beispiel ist $X$ gem"a"s $B_{n,p}$ verteilt (man schreibt auch
 $X\sim B_{n,p}$), falls f"ur $0\le k\le n$ stets
 \begin{gather*}
-  \WKM_X(\{k\})=\WKM\{\omega\in\Omega : X(\omega)=k\} = {n \choose k} p^k(1-p)^{n-k}
+  \WKM_X(\{k\})=\WKM\{\omega\in\Omega \colon X(\omega)=k\} = {n \choose k} p^k(1-p)^{n-k}
 \end{gather*}
 gilt. Analog ist $X$ gem"a"s $P_\lambda$ verteilt, sofern f"ur $k\in\N_0$
 \begin{gather*}
-  \WKM_X(\{k\})=\WKM\{\omega\in\Omega : X(\omega)=k\}=\frac{\lambda^k}{k!}\mathrm e^{-\lambda}\;.
+  \WKM_X(\{k\})=\WKM\{\omega\in\Omega \colon X(\omega)=k\}=\frac{\lambda^k}{k!}\mathrm e^{-\lambda}\;.
 \end{gather*}
 \subsubsection{Speziell verteilte stetige zuf"allige Gr"o"sen}
 Eine zuf"allige Gr"o"se $X$ hei"st \textbf{gleichverteilt} auf einem Intervall,
@@ -591,27 +591,27 @@ Alle diese zuf"alligen Gr"o"sen sind stetig.
 Zum Beispiel ist $X$ gleichverteilt auf $[a,b]$, falls f"ur alle $\alpha<\beta$
 stets
 \begin{gather*}
-  \WKM_X([\alpha,\beta])=\WKM\{\omega\in \Omega : \alpha\le X(\omega)\le \beta\}
+  \WKM_X([\alpha,\beta])=\WKM\{\omega\in \Omega \colon \alpha\le X(\omega)\le \beta\}
      =\frac{\mbox{L"ange von}\, ([\alpha,\beta]\cap[a,b])}{b-a}
 \end{gather*}
 gilt. Oder $X$ ist $\mathcal N(\mu,\sigma^2)$-verteilt (man schreibt $X\sim \mathcal N(\mu,\sigma^2)$),
 sofern
 \begin{gather*}
-  \WKM_X([\alpha,\beta])=\WKM\{\omega\in \Omega : \alpha\le X(\omega)\le \beta\}=
+  \WKM_X([\alpha,\beta])=\WKM\{\omega\in \Omega \colon \alpha\le X(\omega)\le \beta\}=
      \frac{1}{\sqrt{2\pi}\sigma}\int_\alpha^\beta \mathrm e^{-(x-\mu)^2/2\sigma^2}\mathrm d x\;.
 \end{gather*}
 \subsubsection{Identisch verteilte zuf"allige Gr"o"sen}
 Zwei zuf"allige Gr"o"sen $X$ und $Y$ sind \textbf{identisch verteilt}, wenn $\WKM_X=\WKM_Y$ gilt,
 d.\,h.~f"ur alle $B\in\BorelM(\R)$ hat man
 \begin{gather*}
-  \WKM\{\omega\in \Omega : X(\omega)\in B\}= \WKM\{\omega\in \Omega : Y(\omega)\in B\}\;.
+  \WKM\{\omega\in \Omega \colon X(\omega)\in B\}= \WKM\{\omega\in \Omega \colon Y(\omega)\in B\}\;.
 \end{gather*}
 Man schreibt dann $X\stackrel{d}{=}Y$.
 \subsubsection{Verteilungsfunktion einer zuf"alligen Gr"o"se}
 Die \textbf{Verteilungsfunktion} $F_X$ einer zuf"alligen Gr"o"se ist die Verteilungsfunktion
 ihres Verteilungsgesetzes, d.\,h., es gilt
 \begin{gather*}
-  F_X(t)=\WKM_X\big((-\infty,t]\big)=\WKM\{\omega\in\Omega : X(\omega)\le t\}\,,\quad t\in \R\;.
+  F_X(t)=\WKM_X\big((-\infty,t]\big)=\WKM\{\omega\in\Omega \colon X(\omega)\le t\}\,,\quad t\in \R\;.
 \end{gather*}
 F"ur zwei zuf"allige Gr"o"sen $X$ und $Y$ gilt genau dann $X\stackrel{d}{=}Y$, wenn man
 $F_X=F_Y$ hat.
@@ -633,7 +633,7 @@ Sei $(\Omega,\Algeb,\WKM)$ ein Wahrscheinlichkeitsraum. Dann definiert
 man wie im eindimensionalen Fall das Verteilungsgesetz $\WKM_{\vec X}$ von $\vec X$
 durch
 \begin{gather*}
-  \WKM_{\vec X}(B):=\WKM\big(\vec X^{-1}(B)\big)=\WKM\{\omega\in\Omega : (X_1(\omega),\ldots,X_n(\omega))\in B\}\;.
+  \WKM_{\vec X}(B):=\WKM\big(\vec X^{-1}(B)\big)=\WKM\{\omega\in\Omega \colon (X_1(\omega),\ldots,X_n(\omega))\in B\}\;.
 \end{gather*}
 Im Spezialfall $B=B_1\times\cdots\times B_n$ f"ur Borelmengen $B_j\subseteq\R$ folgt
 \begin{gather*}
@@ -664,7 +664,7 @@ $(x_i)_{i\ge 1}$ bzw.~$(y_j)_{j\ge 1}$ von reellen Zahlen bezeichnen  die m"ogli
 Dann nimmt der Vektor $(X,Y)$ die Werte $(x_i,y_j)_{i,j\ge 1}$ an und f"ur das Verteilungsgesetz
 von $\WKM_{(X,Y)}$, d.\,h.~die gemeinsame Verteilung von $X$ und $Y$, gilt
 \begin{gather*}
-  \WKM_{(X,Y)}(B)=\sum_{\{(i,j)\,:\, (x_i,y_j)\in B\}} p_{ij}\,,\quad B\in\PotM(\R^2)\,,
+  \WKM_{(X,Y)}(B)=\sum_{\{(i,j)\colon (x_i,y_j)\in B\}} p_{ij}\,,\quad B\in\PotM(\R^2)\,,
 \end{gather*}
 wobei
 \begin{gather*}
@@ -672,8 +672,8 @@ wobei
 \end{gather*}
 F"ur die Randverteilungen ergibt sich dann
 \begin{gather*}
-  \WKM_X(B)=\sum_{\{i\,:\,x_i\in B\}} q_i \qquad\mbox{und}\qquad
-     \WKM_Y(B)=\sum_{\{j\,:\,y_j\in B\}} r_j\,,\quad B\in\PotM(\R)\,,
+  \WKM_X(B)=\sum_{\{i\colon x_i\in B\}} q_i \qquad\mbox{und}\qquad
+     \WKM_Y(B)=\sum_{\{j\colon y_j\in B\}} r_j\,,\quad B\in\PotM(\R)\,,
 \end{gather*}
 mit
 \begin{gather*}
@@ -687,7 +687,7 @@ $\WKM_{(X,Y)}$ eine Dichte hat, es also eine Funktion $p \colon\R^2\mapsto\R$ gi
 dass f"ur alle $\alpha<\beta$ und $\gamma<\delta$ stets
 \begin{gather*}
   \WKM_{(X,Y)}\big([\alpha,\beta]\times[\gamma,\delta]\big)
-     =\WKM\{\omega\in \Omega : \alpha\le X(\omega)\le\beta,\,\gamma\le Y(\omega)\le\delta\}
+     =\WKM\{\omega\in \Omega \colon \alpha\le X(\omega)\le\beta,\,\gamma\le Y(\omega)\le\delta\}
      =\int_\alpha^\beta\int_\gamma^\delta p(x,y)\,\mathrm d y \,\mathrm d x
 \end{gather*}
 gilt. Dann haben $X$ bzw.~$Y$ Verteilungsdichten $q$ und $r$ mit
@@ -730,7 +730,7 @@ Im stetigen Fall \ref{stet} sind $X$ und $Y$ genau dann unabh"angig, wenn
 \subsection{Rechnen mit zuf"alligen Gr"o"sen}
 \subsubsection{Transformationen}
 Eine Abbildung $f\colon\R\mapsto\R$ hei"st \textbf{messbar}, wenn f"ur jedes $t\in\R$ die
-Menge $\{x\in \R : f(x)\le t\}$ eine Borelmenge ist. Stetige Funktionen, Grenzwerte stetiger
+Menge $\{x\in \R \colon f(x)\le t\}$ eine Borelmenge ist. Stetige Funktionen, Grenzwerte stetiger
 Funktionen oder auch monotone Funktionen besitzen diese Eigenschaft.
 \begin{thm}
 Sei $X$ eine zuf"allige Gr"o"se und sei $f\colon\R\mapsto\R$ messbar. Dann ist $Y:=f(X)$ ebenfalls
