--- a/linde-stochastik-zusfa/definf.tex
+++ b/linde-stochastik-zusfa/definf.tex
@@ -94,6 +94,7 @@
 \newcommand*{\WKM}{\mathbb{P}}      % Wahrscheinlichkeitsmaß
 
 \DeclareMathOperator{\cov}{cov}     % Kovarianz
+\DeclareMathOperator{\card}{card}   % Kardinalität
 
 \SVN $LastChangedRevision$
 \SVN $LastChangedDate$
@@ -277,7 +278,7 @@ Das Maß $\WKM$ auf $\PotM(\Omega)$ mit
 \end{gather*}
 heißt \highl{Gleichverteilung} auf $\{\omega_1,\ldots,\omega_N\}$. Für ein Ereignis $A$ gilt dann
 \begin{gather*}
-  \WKM(A)=\frac{\mathrm{card}\{ i\le N \colon \omega_i\in A\}}{N}=
+  \WKM(A)=\frac{\card\{ i\le N \colon \omega_i\in A\}}{N}=
      \frac{\mbox{Anzahl der günstigen Fälle für A}}{\mbox{Anzahl der möglichen Fälle}}\;.
 \end{gather*}
 \subsubsection{Binomialverteilung}
@@ -532,7 +533,7 @@ $1\le i_1<\cdots<i_m\le n$ hat man
 \end{gather}
 Die Ereignisse $A_1,\ldots,A_n$ aus $\Algeb$ heißen \highl[unabhängig!paarweise]{paarweise unabhängig}, wenn
 jeweils zwei Ereignisse aus $A_1,\ldots,A_n$ unabhängig sind, d.\,h.~die Gleichungen
-(\ref{unab1}) bzw.~(\ref{unab2}) müssen nur für $\mathrm{card}(I)=2$ bzw.~für $m=2$ erfüllt sein.
+(\ref{unab1}) bzw.~(\ref{unab2}) müssen nur für $\card(I)=2$ bzw.~für $m=2$ erfüllt sein.
 \subsubsection{Eigenschaften}
 Unabhängige Mengen $A_1,\ldots,A_n$ sind auch paarweise unabhängig. Die Umkehrung ist
 i.a.~falsch. Ebenso falsch ist, dass aus
