Befehl für die Eulersche Zahl
Die Eulersche Zahl ist eine feststehende Größe (also keine Variable) und
daher muss das Symbol aufrecht gesetzt werden (im Unterschied zu einer
Variablen, die e heißt). Herr Linde hat das bisher von Hand gemacht. Mit
einem Befehl ist das ganze einheitlicher.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1851 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik-zusfa/definf.tex
+++ b/linde-stochastik-zusfa/definf.tex
@@ -96,6 +96,9 @@
 \DeclareMathOperator{\cov}{cov}     % Kovarianz
 \DeclareMathOperator{\card}{card}   % Kardinalität
 
+% http://www.tug.org/TUGboat/Articles/tb18-1/tb54becc.pdf
+\newcommand*{\ez}{\mathrm{e}}               % eulersche Zahl
+
 \SVN $LastChangedRevision$
 \SVN $LastChangedDate$
 
@@ -305,7 +308,7 @@ $m$ defekte Geräte beobachtet.
 Es sei $\Omega=\N_0=\{0,1,2,\ldots\}$. Für eine Zahl $\lambda>0$ definiert
 man die \highl{Poissonverteilung} mit Parameter $\lambda$ durch
 \begin{gather*}
-  P_\lambda(\{k\}):= \frac{\lambda^k}{k !}\,\mathrm e^{-\lambda}\quad\mbox{für}\quad k\in\N_0\;.
+  P_\lambda(\{k\}):= \frac{\lambda^k}{k !}\,\ez^{-\lambda}\quad\mbox{für}\quad k\in\N_0\;.
 \end{gather*}
 Die Bedeutung der Poissonverteilung ergibt sich aus folgendem Satz:
 \begin{thm}
@@ -363,34 +366,34 @@ ihre Dichte
 \begin{gather*}
   p(x)
      := \begin{cases}
-          \lambda\,\mathrm e^{-\lambda x} &\colon x>0\\
+          \lambda\,\ez^{-\lambda x} &\colon x>0\\
           0 &\colon x\le 0
         \end{cases}\;.
 \end{gather*}
 Für ein Intervall $[\alpha,\beta]\subseteq [0,\infty)$ berechnet sich damit
 die Wahrscheinlichkeit seines Eintretens durch
 \begin{gather*}
-  E_\lambda([\alpha,\beta])=\lambda \int_\alpha^\beta \mathrm e^{-\lambda x}\,\mathrm dx
-     = \mathrm e^{-\lambda\alpha}- \mathrm e^{-\lambda\beta}\;.
+  E_\lambda([\alpha,\beta])=\lambda \int_\alpha^\beta \ez^{-\lambda x}\,\mathrm dx
+     = \ez^{-\lambda\alpha}- \ez^{-\lambda\beta}\;.
 \end{gather*}
 \subsubsection{Normalverteilung}
 Gegeben seien Zahlen $\mu\in\R$ und $\sigma>0$. Die
 Funktion
 \begin{gather*}
-  p_{\mu,\sigma^2}(x):= \frac{1}{\sqrt{2\pi}\sigma}\,\mathrm e^{-(x-\mu)^2/2\sigma^2}\;,
+  p_{\mu,\sigma^2}(x):= \frac{1}{\sqrt{2\pi}\sigma}\,\ez^{-(x-\mu)^2/2\sigma^2}\;,
      \quad x\in\R\;,
 \end{gather*}
 erzeugt ein Wahrscheinlichkeitsmaß $\mathcal N(\mu,\sigma^2)$, das
 man \highl{Normalverteilung} mit Mittelwert $\mu$ und Varianz $\sigma^2$ nennt. Es gilt dann
 \begin{gather*}
   \mathcal N(\mu,\sigma^2)([\alpha,\beta])=\frac{1}{\sqrt{2\pi}\sigma}
-     \int_\alpha^\beta \mathrm e^{-(x-\mu)^2/2\sigma^2}\mathrm dx\;.
+     \int_\alpha^\beta \ez^{-(x-\mu)^2/2\sigma^2}\mathrm dx\;.
 \end{gather*}
 Im Fall $\mu=0$ und $\sigma=1$ erhält man die \highl{Standardnormalverteilung}
 $\mathcal N(0,1)$ . Wahrscheinlichkeiten des Eintretens von Intervallen berechnen sich in diesem Fall durch
 \begin{gather*}
   \mathcal N(0,1)([\alpha,\beta])=\frac{1}{\sqrt{2\pi}}
-     \int_\alpha^\beta \mathrm e^{-x^2/2}\mathrm dx\;.
+     \int_\alpha^\beta \ez^{-x^2/2}\mathrm dx\;.
 \end{gather*}
 
 \subsubsection{Gleichverteilung auf einer Menge im $\R^n$}
@@ -606,7 +609,7 @@ $X\sim B_{n,p}$), falls für $0\le k\le n$ stets
 \end{gather*}
 gilt. Analog ist $X$ gemäß $P_\lambda$ verteilt, sofern für $k\in\N_0$
 \begin{gather*}
-  \WKM_X(\{k\})=\WKM\{\omega\in\Omega \colon X(\omega)=k\}=\frac{\lambda^k}{k!}\mathrm e^{-\lambda}\;.
+  \WKM_X(\{k\})=\WKM\{\omega\in\Omega \colon X(\omega)=k\}=\frac{\lambda^k}{k!}\ez^{-\lambda}\;.
 \end{gather*}
 \subsubsection{Speziell verteilte stetige zufällige Größen}
 Eine zufällige Größe $X$ heißt \highl{gleichverteilt} auf einem Intervall,
@@ -623,7 +626,7 @@ gilt. Oder $X$ ist $\mathcal N(\mu,\sigma^2)$-verteilt (man schreibt $X\sim \mat
 sofern
 \begin{gather*}
   \WKM_X([\alpha,\beta])=\WKM\{\omega\in \Omega \colon \alpha\le X(\omega)\le \beta\}=
-     \frac{1}{\sqrt{2\pi}\sigma}\int_\alpha^\beta \mathrm e^{-(x-\mu)^2/2\sigma^2}\mathrm d x\;.
+     \frac{1}{\sqrt{2\pi}\sigma}\int_\alpha^\beta \ez^{-(x-\mu)^2/2\sigma^2}\mathrm d x\;.
 \end{gather*}
 \subsubsection{Identisch verteilte zufällige Größen}
 Zwei zufällige Größen $X$ und $Y$ sind \highl[verteilt!identisch]{identisch verteilt}, wenn $\WKM_X=\WKM_Y$ gilt,
