Ein Befehl fürs Volumen einer Menge
Im Sinne der Einheitlichkeit.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1854 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik-zusfa/definf.tex
+++ b/linde-stochastik-zusfa/definf.tex
@@ -96,6 +96,7 @@
 
 \DeclareMathOperator{\cov}{cov}     % Kovarianz
 \DeclareMathOperator{\card}{card}   % Kardinalität
+\DeclareMathOperator{\vol}{vol}     % Volumen einer Menge
 
 % http://www.tug.org/TUGboat/Articles/tb18-1/tb54becc.pdf
 \newcommand*{\ez}{\mathrm{e}}               % eulersche Zahl
@@ -408,14 +409,14 @@ $\NormVert(0,1)$ . Wahrscheinlichkeiten des Eintretens von Intervallen berechnen
 
 \subsubsection{Gleichverteilung auf einer Menge im $\R^n$}
 Es sei $E\subseteq \R^n$ eine beschränkte und abgeschlossene
-Teilmenge, deren $n$-dimensionales Volumen $\mathrm{vol}_n(E)$ man
+Teilmenge, deren $n$-dimensionales Volumen $\vol_n(E)$ man
 berechnen kann. Man definiert die \highl[Gleichverteilung!auf $E$]{Gleichverteilung auf $E$} durch den Ansatz
 \begin{gather*}
-  \WKM(A)=\frac{\mathrm{vol}_n(A\cap E)}{\mathrm{vol}_n(E)}\;.
+  \WKM(A)=\frac{\vol_n(A\cap E)}{\vol_n(E)}\;.
 \end{gather*}
 Insbesondere ergibt sich für $A\subseteq E$ die Aussage
 \begin{gather*}
-  \WKM(A)=\frac{\mathrm{vol}_n(A)}{\mathrm{vol}_n(E)}\;,
+  \WKM(A)=\frac{\vol_n(A)}{\vol_n(E)}\;,
 \end{gather*}
 d.\,h., wie im eindimensionalen Fall hängt die Wahrscheinlichkeit des Eintretens einer Menge $A\subseteq E$
 nur von deren Volumen ab, nicht aber von deren Lage innerhalb $E$ noch von ihrer Gestalt.
